# rust_fbreels_more

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: release.yml
config/: default_config.json
docs/superpowers/plans/: 2026-06-29-fb-reels-tv-implementation.md
docs/superpowers/specs/: 2026-06-29-fb-reels-tv-design.md
fb-reels-tv/: README.md  index.html  package.json  service.js
fb-reels-tv/src/: auth.js  main.js  qr-lib.js  reels.js  remote.js  style.css
fb-reels-tv/worker/: wrangler.toml
fb-reels-tv/worker/src/: index.js
js/: auto_scroll.js  controls.js
scripts/: deploy-worker.ps1  deploy-worker.sh
src/: app.rs  config.rs  error.rs  main.rs  updater.rs
src/ui/: console.rs  keyboard.rs  keyboard_sim.rs  mod.rs  tray.rs  webview.rs
