[package]
name = "fb-reels-lite"
version = "0.1.0"
edition = "2021"
description = "Lightweight Facebook Reels viewer with auto-scroll"
license = "MIT"

[dependencies]
tao = "0.35"
wry = { version = "0.55", features = ["devtools"], default-features = false }
tray-icon = "0.19"
muda = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
directories = "4.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
semver = "1.0"
log = "0.4"
env_logger = "0.11"

[features]
default = ["facebook"]
facebook = []
