[package]
name = "fb-reels-lite"
version = "0.1.1"
edition = "2021"
description = "Lightweight Facebook Reels viewer with auto-scroll"
license = "MIT"

[dependencies]
tao = "0.35"
wry = { version = "0.55", features = ["devtools"], default-features = false }
tray-icon = "0.19"
muda = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
directories = "4.0"
reqwest = { version = "0.13", features = ["json", "rustls-tls"], default-features = false }
semver = "1.0"
log = "0.4"
env_logger = "0.11"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_UI_Input_KeyboardAndMouse", "Win32_Foundation"] }

[features]
default = ["facebook"]
facebook = []
